# crustyimg

./: .gitignore  .pre-commit-hooks.yaml  .repo-context.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  RELEASING.md  SECURITY.md  deny.toml  dist-workspace.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  dco.yml  pages.yml  publish-crates.yml  release.yml  scheduled-audit.yml
assets/fonts/: README.md
bench/corpus/: README.md
benches/: pipeline.rs
decisions/: DEC-002-single-image-model-and-operation-trait.md  DEC-003-metadata-dual-lane.md  DEC-004-codec-policy-pure-rust-default.md  DEC-005-recipe-toml-and-operation-registry.md  DEC-006-no-async-runtime-rayon-for-batch.md  DEC-007-error-handling-thiserror-anyhow.md  DEC-008-resize-backend-fast-image-resize.md  DEC-009-ci-matrix-and-rust-edition.md  DEC-010-source-crate-glob.md  DEC-011-viuer-terminal-display.md  DEC-012-clap-cli-framework.md  DEC-013-kamadak-exif-read-only-metadata.md  DEC-014-operation-params-mechanism.md  DEC-015-resize-output-format-and-partial-batch.md  DEC-016-encode-quality-policy.md  DEC-017-operations-may-read-metadata-for-pixel-transforms.md  DEC-018-permissive-license-policy-cargo-deny.md  DEC-019-perceptual-auto-quality-ssimulacra2.md  DEC-020-avif-output-feature-gated-ravif.md  DEC-021-webp-lossless-default-decode-pure-rust.md  DEC-022-lossy-webp-feature-gated-libwebp.md  DEC-023-max-size-dimension-reduction-fallback.md  DEC-024-optimize-command-shape.md  DEC-025-diff-command-and-check-exit-code.md  DEC-026-responsive-command-and-html-emission.md  DEC-027-display-feature-on-by-default.md  DEC-028-benchmarking-criterion-and-equal-quality.md  DEC-029-metadata-write-crates-img-parts-little-exif.md  DEC-030-copy-metadata-jpeg-only-png-exif-crate-mismatch.md  DEC-031-multi-image-operation-overlay-loaded-at-io-boundary.md  DEC-032-text-watermark-ab-glyph-and-bundled-go-font.md  DEC-033-indicatif-batch-progress.md  DEC-034-decode-resource-limits-on-canonical-load.md  DEC-035-path-symlink-traversal-hardening.md  DEC-036-recipe-resource-limits.md  DEC-037-full-supply-chain-gate-cargo-deny.md  DEC-038-resize-output-size-limit.md  DEC-039-clap-complete-shell-completions.md  DEC-040-cargo-dist-release-pipeline.md  DEC-041-release-channels-homebrew-and-crates-io.md  (+38 more)
demo/: README.md  demo.css  demo.js  index.html  site.webmanifest  worker.js
docs/: USAGE.md  api-contract.md  architecture.md  backlog.md  cli-reference.md  cost-tracking.md  data-model.md  development.md  estimates-and-predictions.md  feature-exploration.md  launch-readiness.md  licensing.md  moat.md  recipes.md  repo-tooling-backlog.md  roadmap-draft-proj-004-005.md  roadmap.md  territory.md
docs/blog/: 2026-06-14-crustyimg-the-recipe-driven-image-cli.md  2026-07-06-crustyimg-optimize-picks-the-format.md  2026-07-06-deciding-photo-vs-graphic-without-ml.md  2026-07-06-how-optimize-picks-a-format.md  README.md
docs/contributions/: upstream-image-rs-avif-decode.md
docs/framework-feedback/: process-feedback.md  signals-harvest.md
docs/research/: heic-input-reach-spike.md  proj-002-design-analysis-layer.md  proj-002-design-classification.md  proj-002-design-format-engine.md  proj-002-design-lint.md  proj-002-design-planner.md  proj-002-findings.md  proj-002-scoping-research.md  proj-007-threat-model.md  proj-008-raw-on-wasm-probe.md  proj-008-rust-directives-audit.md  proj-008-wasm-build.md  proj-009-fuzz-run.md
docs/reviews/: proj-002-004-redteam-prompt.md  proj-002-004-review-prompt.md  proj-002-framing-kickoff-prompt.md
docs/sessions/: 2026-06-14-stage-002-handoff.md  2026-06-15-stage-003-continue-handoff.md  2026-06-16-roadmap-and-stage-004-decision-handoff.md  2026-06-16-spec-018-avif-build-handoff.md  2026-06-16-stage-004-formats-quality-build-handoff.md  2026-06-17-stage-008-shipped-next-stage-handoff.md  2026-06-18-stage-009-shipped-stage-004-kickoff-handoff.md  2026-06-19-stage-004-complete-stage-005-started-handoff.md  2026-06-19-stage-006-shipped-stage-007-started-handoff.md  2026-07-04-v0.1.1-shipped-patch-lane-handoff.md  2026-07-06-proj-004-lint-stage-013-build-handoff.md
examples/: gen_avif_fixture.rs  gen_bench_corpus.rs  gen_raw_fixture.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: avif_decode.rs  heic_decode.rs  raw_preview.rs  svg_decode.rs
gitignore_files_maybe/: crustyimg0.acorn
guidance/: constraints.yaml  license-watchlist.yaml  questions.yaml
npm/: README.md  package.overrides.json
projects/PROJ-001-crustyimg-mvp/: brief.md
projects/PROJ-002-optimization-engine/: brief.md
projects/PROJ-004-image-lint/: brief.md
projects/PROJ-007-reproducible-build/: brief.md
projects/PROJ-008-wasm-core-and-demo/: brief.md
projects/PROJ-009-input-reach/: brief.md
projects/_templates/: spec.md
recipes/: gallery.toml  product.toml  web.toml
reports/daily/: 2026-06-15.md
scripts/: _lib.sh  bench-compare.py  bench.py  cli-golden.py  cost-audit.sh  demo-assemble.mjs  release.sh  serve.mjs  specs-by-stage.sh  status.sh  test.sh  validate-frontmatter.sh  wasm-npm-finalize.mjs
scripts/lib/: png.mjs  wasm-artifact.mjs
src/: error.rs  lib.rs  main.rs  wasm.rs
src/analysis/: decide.rs  mod.rs
src/cli/: build.rs  common.rs  mod.rs  ops.rs  optimize.rs  report.rs
src/image/: avif.rs  heic.rs  mod.rs  raw.rs  sniff.rs  svg.rs
src/lint/: config.rs  mod.rs  report.rs  rules.rs
src/metadata/: mod.rs  tiff.rs
src/operation/: mod.rs  registry.rs
src/pipeline/: mod.rs
src/quality/: mod.rs
src/recipe/: bundled.rs  mod.rs
src/sink/: mod.rs
src/source/: mod.rs
tests/: adoption_glue.rs  apply_batch.rs  audit_bench.rs  build.rs  build_cache.rs  build_injective.rs  build_lock.rs  build_watch.rs  cli.rs  completions.rs  demo_copy.rs  demo_smoke.mjs  edit.rs  fuzz_regressions.rs  image_load.rs  info_exif.rs  input_avif.rs  input_heic.rs  input_raw.rs  input_svg.rs  lint.rs  metadata.rs  npm_smoke.mjs  pipeline.rs  recipe_round_trip.rs  sink.rs  smoke.rs  source.rs  spec097_reexport_paths.rs  wasm_roundtrip.rs  watermark.rs
(+487 files in other folders)
