[package]
name = "crustyimg"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
description = "A fast Rust CLI to view and transform images."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jysf/crustyimg"
homepage = "https://github.com/jysf/crustyimg"
readme = "README.md"
keywords = ["image", "cli", "webp", "resize", "optimize"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/decisions", "/docs", "/projects", "/reports", "/guidance", "/feedback", "/scripts", "/.github", "/.claude"]

[lib]
name = "crustyimg"
path = "src/lib.rs"

[[bin]]
name = "crustyimg"
path = "src/main.rs"

# Runtime crates arrive with the specs that use them. SPEC-002 adds the first
# two: `image` (the single pixel library, DEC-002) and `thiserror` (typed
# library errors, DEC-007). Both are pre-justified by their DECs — no new DEC.
# `image` is pinned to the pure-Rust formats only (DEC-004,
# `pure-rust-codecs-default`): default features off, no avif/mozjpeg/native.
# `webp` (SPEC-019, DEC-021) is included in the default set — it is pure-Rust
# (`image-webp`, MIT/Apache, no nasm/system libs): WebP DECODE (lossy+lossless)
# + LOSSLESS WebP encode. Lossy WebP encode (libwebp, a C dep) is the separate
# off-by-default `webp-lossy` feature (SPEC-020). The off-by-default `avif`
# feature (SPEC-018, DEC-020) adds AVIF output via `image/avif`.
# SPEC-005 adds `viuer` as an optional dep behind the `display` feature
# (DEC-011). Default builds stay viuer-free; `--features display` enables it.
[dependencies]
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "webp"] }
fast_image_resize = { version = "=5.5.0", features = ["image"] }
thiserror = "=2.0.18"
glob = "=0.3.3"
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
viuer = { version = "=0.11.0", optional = true }
clap = { version = "=4.6.1", features = ["derive"] }
kamadak-exif = "=0.6.1"
# Container-lane metadata WRITE crates (DEC-003, DEC-029). Pure-Rust, permissive
# (both MIT OR Apache-2.0) — `just deny` stays green with no new exception. The read
# side stays kamadak-exif (read-only). `img-parts` does segment/chunk-level strip +
# rewrite (JPEG APPn/COM, PNG ancillary chunks) without re-decoding pixels;
# `little_exif` does tag-level EXIF edits (selective GPS removal). v1 (SPEC-026) =
# `strip` + `clean --gps` for JPEG + PNG.
img-parts = "=0.4.0"
little_exif = "=0.6.23"
# Text-watermark glyph rasterizer (SPEC-030, DEC-032). Apache-2.0, pure-Rust; pulls
# only ab_glyph_rasterizer (Apache-2.0) + owned_ttf_parser/ttf-parser (MIT OR
# Apache-2.0) — `just deny` stays green. NOT imageproc (it drags in sdl2/nalgebra).
# KEEP default features (the `std` feature): ab_glyph/ttf-parser need std for float
# math; do NOT set default-features = false. crustyimg's own --no-default-features
# (lean build) does not affect ab_glyph's defaults. The default font is the bundled
# BSD-3 Go font (assets/fonts/Go-Regular.ttf), overridable with `--font PATH`.
ab_glyph = "=0.2.32"
# Batch parallelism + progress for `apply --recipe` over a source list (STAGE-005,
# SPEC-031). `rayon` (data parallelism across inputs) is pre-justified by DEC-006
# (no async; rayon for batch). `indicatif` (progress bar) is DEC-033. Both pure-Rust,
# permissive (MIT OR Apache-2.0 / MIT) — `just deny` stays green. Each rayon task
# rebuilds its own pipeline from the (Sync) recipe + registry, since `Operation` is
# not `Send` (no Box<dyn Operation> crosses a thread).
rayon = "=1.12.0"
indicatif = "=0.18.4"
# Shell-completion generator for the `completions <SHELL>` subcommand (SPEC-040,
# DEC-039). Pure-Rust, MIT OR Apache-2.0 (clap project family). Non-optional: the
# `completions` path compiles and works in both the default and the lean
# `--no-default-features` (headless) build. Pinned to match clap =4.6.1.
clap_complete = "=4.6.5"
# Perceptual quality metric for auto-quality (SPEC-016, DEC-019). Pure-Rust,
# BSD-2-Clause (permissive — DEC-018). A metric crate only (no decode/encode/
# resize), so it does not violate `single-image-library`.
ssimulacra2 = "=0.5.1"
# Lossy WebP encode (SPEC-020, DEC-022) behind the off-by-default `webp-lossy`
# feature. `webp` (MIT/Apache) → `libwebp-sys` (MIT) → VENDORED libwebp (BSD-3),
# compiled with `cc` — the project's FIRST C dependency, strictly opt-in (the
# default build stays pure-Rust). default-features off so we use the raw
# `from_rgba`/`from_rgb` encoders, NOT the webp crate's `image` feature (which
# would pull a second `image` crate). `just deny` stays green with no exception.
webp = { version = "=0.3.1", optional = true, default-features = false }

[features]
# `display` (terminal preview via viuer) is ON BY DEFAULT so `view` works out of the
# box in the released binary — it is a headline command (DEC-027, supersedes DEC-011).
# Headless/server/CI builds that don't want viuer's tree use `--no-default-features`.
default = ["display"]
display = ["dep:viuer"]
webp-lossy = ["dep:webp"]
# AVIF output behind an off-by-default feature (SPEC-018, DEC-020). The codec
# arrives via the `image` crate's own `avif` feature → `ravif` → `rav1e` (pure
# Rust, no nasm/system libs), so this adds NO new top-level dep. Kept gated for
# compile time / binary size / encode speed; the default build keeps AVIF output
# at exit 4 (DEC-004). `just deny` stays green via the scoped `libfuzzer-sys`
# exception in deny.toml.
avif = ["image/avif"]

[dev-dependencies]
tempfile = "=3.27.0"
serde_json = "=1.0.150"
# Micro-benchmark harness (SPEC-025, DEC-028). Dev-only — NOT in the shipped binary
# or the default build; runs via `just bench`. Permissive (MIT/Apache); `just deny`
# stays green.
criterion = "=0.8.2"

[[bench]]
name = "pipeline"
harness = false

# Release profile used by cargo-dist (DEC-040). Inherits from release with thin
# LTO for smaller, faster binaries. Inert for normal `cargo build`/`cargo test`.
[profile.dist]
inherits = "release"
lto = "thin"
