[package]
name = "crustyimg"
version = "0.4.0"
edition = "2021"
# MSRV = max(rust-version) across the locked tree. SPEC-058 raised the floor from
# 1.89 → 1.90 (avif-parse 2.1.0 requires 1.90). Let the CI `msrv` job confirm.
rust-version = "1.90.0"
description = "A fast Rust CLI to view and transform images."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jysf/crustyimg"
homepage = "https://github.com/jysf/crustyimg"
readme = "README.md"
keywords = ["image", "cli", "webp", "resize", "optimize"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/decisions", "/docs", "/projects", "/reports", "/guidance", "/feedback", "/scripts", "/.github", "/.claude"]

[lib]
name = "crustyimg"
path = "src/lib.rs"

[[bin]]
name = "crustyimg"
path = "src/main.rs"

# Runtime crates arrive with the specs that use them. SPEC-002 adds the first
# two: `image` (the single pixel library, DEC-002) and `thiserror` (typed
# library errors, DEC-007). Both are pre-justified by their DECs — no new DEC.
# `image` is pinned to the pure-Rust formats only (DEC-004,
# `pure-rust-codecs-default`): default features off, no avif/mozjpeg/native.
# `webp` (SPEC-019, DEC-021) is included in the default set — it is pure-Rust
# (`image-webp`, MIT/Apache, no nasm/system libs): WebP DECODE (lossy+lossless)
# + LOSSLESS WebP encode. Lossy WebP encode (libwebp, a C dep) is the separate
# off-by-default `webp-lossy` feature (SPEC-020). The off-by-default `avif`
# feature (SPEC-018, DEC-020) adds AVIF output via `image/avif`.
# SPEC-005 adds `viuer` as an optional dep behind the `display` feature
# (DEC-011). Default builds stay viuer-free; `--features display` enables it.
[dependencies]
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "webp"] }
fast_image_resize = { version = "=6.0.0", features = ["image"] }
thiserror = "=2.0.18"
glob = "=0.3.3"
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
viuer = { version = "=0.11.0", optional = true }
clap = { version = "=4.6.1", features = ["derive"] }
kamadak-exif = "=0.6.1"
# Container-lane metadata WRITE crate (DEC-003, DEC-046). Pure-Rust, permissive
# (MIT OR Apache-2.0) — `just deny` stays green with no new exception. The read
# side stays kamadak-exif (read-only). `img-parts` does segment/chunk-level strip +
# rewrite (JPEG APPn/COM, PNG ancillary chunks) without re-decoding pixels. Tag-level
# EXIF edits (`set` / `clean --gps`) are done by an in-house TIFF-IFD reader+writer
# (`src/metadata/tiff.rs`, SPEC-045/DEC-046) operating on the bare TIFF block
# `img-parts` exposes — this replaced `little_exif` (dropping quick-xml,
# RUSTSEC-2026-0194/-0195, and brotli from the tree). v1 (SPEC-026) = `strip` +
# `clean --gps` for JPEG + PNG.
img-parts = "=0.4.0"
# Text-watermark glyph rasterizer (SPEC-030 → SPEC-044, DEC-045). Pure-Rust,
# MIT OR Apache-2.0, and `ttf-parser`-free (unlike the superseded `ab_glyph`):
# `skrifa` (Google `fontations`) provides outlines + metrics, `zeno` rasterizes
# the anti-aliased coverage mask. This drops the unmaintained `ttf-parser`
# transitive from the tree, letting `deny.toml` delete its RUSTSEC-2026-0192
# ignore. NOT imageproc (it drags in sdl2/nalgebra). The default font is the
# bundled BSD-3 Go font (assets/fonts/Go-Regular.ttf), overridable with `--font PATH`.
skrifa = "=0.44.0"
zeno = "=0.3.3"
# Batch parallelism + progress for `apply --recipe` over a source list (STAGE-005,
# SPEC-031). `rayon` (data parallelism across inputs) is pre-justified by DEC-006
# (no async; rayon for batch). `indicatif` (progress bar) is DEC-033. Both pure-Rust,
# permissive (MIT OR Apache-2.0 / MIT) — `just deny` stays green. Each rayon task
# rebuilds its own pipeline from the (Sync) recipe + registry, since `Operation` is
# not `Send` (no Box<dyn Operation> crosses a thread).
rayon = "=1.12.0"
indicatif = "=0.18.6"
# Shell-completion generator for the `completions <SHELL>` subcommand (SPEC-040,
# DEC-039). Pure-Rust, MIT OR Apache-2.0 (clap project family). Non-optional: the
# `completions` path compiles and works in both the default and the lean
# `--no-default-features` (headless) build. Pinned to match clap =4.6.1.
clap_complete = "=4.6.5"
# Perceptual quality metric for auto-quality (SPEC-016, DEC-019). Pure-Rust,
# BSD-2-Clause (permissive — DEC-018). A metric crate only (no decode/encode/
# resize), so it does not violate `single-image-library`.
ssimulacra2 = "=0.5.1"
# Lossy WebP encode (SPEC-020, DEC-022) behind the off-by-default `webp-lossy`
# feature. `webp` (MIT/Apache) → `libwebp-sys` (MIT) → VENDORED libwebp (BSD-3),
# compiled with `cc` — the project's FIRST C dependency, strictly opt-in (the
# default build stays pure-Rust). default-features off so we use the raw
# `from_rgba`/`from_rgb` encoders, NOT the webp crate's `image` feature (which
# would pull a second `image` crate). `just deny` stays green with no exception.
webp = { version = "=0.3.1", optional = true, default-features = false }
# AVIF DECODE on the default, pure-Rust path (SPEC-058, DEC-053). Two CODEC deps
# feeding the canonical `Image` (the webp-lossy precedent, DEC-021/DEC-022) — NOT
# a second pixel library, so `single-image-library` is not tripped. AV1/AVIF is
# patent royalty-free, so it belongs on the default path (unlike HEIC, DEC-052).
#   `re_rav1d` (BSD-2-Clause, rerun's rav1d+dav1d-rs fork) — built NO-ASM
#   (`default-features = false`, only `bitdepth_8`/`bitdepth_16`) → pure-Rust,
#   ZERO build-tool deps (no nasm/meson), clean on all three CI OSes. We use its
#   re-exported safe `dav1d` API (`Decoder`/`send_data`/`get_picture`/plane access).
#   `avif-parse` (MPL-2.0, kornelski/Firefox-mp4parse-derived) — parses the
#   ISOBMFF/MIAF container to the primary-item + alpha AV1 OBUs; rejects grid/tiled
#   cleanly. MPL-2.0 is FILE-level weak copyleft (does NOT relicense our binary) —
#   allowed via a documented per-crate `deny.toml` exception (the ansi_colours
#   precedent). `image`'s own AVIF decode is dav1d/C and is NOT used (DEC-004).
re_rav1d = { version = "=0.1.3", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
avif-parse = "=2.1.0"
# SVG RASTERIZE on the default, pure-Rust path (SPEC-060, DEC-054). `resvg` (with
# `usvg` + `tiny-skia` transitively) rasterizes `.svg` to the canonical `Image` —
# a rasterizer feeding the pixel core, NOT a second pixel library, so
# `single-image-library` is not tripped (the AVIF/webp-lossy precedent). Pure-Rust,
# zero system deps; the WHOLE tree is permissive (Apache-2.0/MIT/BSD/Zlib), so
# `just deny` needs NO new license exception.
#   `default-features = false` drops `system-fonts`/`memmap-fonts`/`raster-images`
#   (and the gif/webp/jpeg raster decoders they pull) — SVG rasterize stays lean
#   and deterministic. `features = ["text"]` keeps SVG `<text>` rendering, using
#   ONLY the bundled BSD-3 Go font (assets/fonts/Go-Regular.ttf, DEC-045) via an
#   explicit fontdb — no system-font enumeration. That text stack re-adds the
#   unmaintained `ttf-parser` (usvg -> fontdb/rustybuzz), covered by the documented
#   RUSTSEC-2026-0192 advisory ignore in deny.toml (parse-time only; upstream is
#   migrating font parsing onto fontations/HarfRust, which will delete it for us).
# Hostile-input safety lives in src/image/svg.rs: external file/URL hrefs refused
# (resources_dir=None + href resolver), output dims capped from usvg Tree::size()
# BEFORE Pixmap allocation (DEC-034). Non-optional (default path); no new feature.
resvg = { version = "=0.47.0", default-features = false, features = ["text"] }
# HEIC/HEIF DECODE behind the off-by-default `heic` feature (SPEC-062, DEC-056,
# implementing DEC-052). NEVER in a distributed artifact: HEVC is patent-encumbered
# (Access Advance) on every decode path, and the mature pure-Rust decoders are AGPL.
#   `libheif-rs` (MIT) → `libheif-sys` (MIT) → the SYSTEM libheif C library (LGPL,
#   decode-only). cargo-deny sees only the MIT Rust crates, so `just deny` stays green
#   with NO exception — the LGPL obligation is attribution (docs/licensing.md), not a
#   deny entry. Contrast `ansi_colours`, which is an LGPL *crate*.
#   `default-features = false` drops `latest` (= v1_21, which would demand a system
#   libheif ≥ 1.21) and the `image` feature (a second `image` crate). `v1_17` is the
#   lowest API floor libheif-sys ships bindings for, so the feature builds against
#   Ubuntu 24.04's libheif 1.17.6 as well as Homebrew's 1.23 — see DEC-056.
#   Bindings are PRE-GENERATED per API version (no `use-bindgen`), so this adds no
#   bindgen/libclang build-tool dependency; and NOT `embedded-libheif`, which would
#   vendor+cmake-build libheif and pull the LGPLv3 §4 static-relink obligation.
libheif-rs = { version = "=2.7.0", optional = true, default-features = false, features = ["v1_17"] }

[features]
# `display` (terminal preview via viuer) is ON BY DEFAULT so `view` works out of the
# box in the released binary — it is a headline command (DEC-027, supersedes DEC-011).
# Headless/server/CI builds that don't want viuer's tree use `--no-default-features`.
default = ["display"]
display = ["dep:viuer"]
webp-lossy = ["dep:webp"]
# AVIF output behind an off-by-default feature (SPEC-018, DEC-020). The codec
# arrives via the `image` crate's own `avif` feature → `ravif` → `rav1e` (pure
# Rust, no nasm/system libs), so this adds NO new top-level dep. Kept gated for
# compile time / binary size / encode speed; the default build keeps AVIF output
# at exit 4 (DEC-004). `just deny` stays green via the scoped `libfuzzer-sys`
# exception in deny.toml.
avif = ["image/avif"]
# HEIC/HEIF INPUT behind an off-by-default feature (SPEC-062, DEC-052/DEC-056).
# Requires a system libheif (≥ 1.17) at build and run time — `brew install libheif`
# / `apt-get install libheif-dev`. Local-build-only: no released binary, Homebrew
# bottle, or `cargo install` default enables it. Without it, a `.heic` input is
# DETECTED and rejected with `ImageError::CodecNotBuilt` → exit 4.
heic = ["dep:libheif-rs"]

[dev-dependencies]
tempfile = "=3.27.0"
serde_json = "=1.0.150"
# Micro-benchmark harness (SPEC-025, DEC-028). Dev-only — NOT in the shipped binary
# or the default build; runs via `just bench`. Permissive (MIT/Apache); `just deny`
# stays green.
criterion = "=0.8.2"

[[bench]]
name = "pipeline"
harness = false

# Release profile used by cargo-dist (DEC-040). Inherits from release with thin
# LTO for smaller, faster binaries. Inert for normal `cargo build`/`cargo test`.
[profile.dist]
inherits = "release"
lto = "thin"
