[package]
name = "crustyimg"
version = "0.4.0"
edition = "2021"
# MSRV = max(rust-version) across the locked tree. SPEC-058 raised the floor from
# 1.89 → 1.90 (avif-parse 2.1.0 requires 1.90). Let the CI `msrv` job confirm.
rust-version = "1.90.0"
description = "A fast Rust CLI to view and transform images."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jysf/crustyimg"
homepage = "https://github.com/jysf/crustyimg"
readme = "README.md"
keywords = ["image", "cli", "webp", "resize", "optimize"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["/decisions", "/docs", "/projects", "/reports", "/guidance", "/feedback", "/scripts", "/.github", "/.claude"]

[lib]
name = "crustyimg"
path = "src/lib.rs"
# `cdylib` is what wasm-bindgen links the `.wasm` artifact from (SPEC-072, DEC-064);
# `rlib` stays so the bin + integration tests keep linking the library normally. On
# native targets the extra cdylib is an unused side artifact (a `.dylib`/`.so`/`.dll`
# next to the rlib) — it changes no native behavior.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "crustyimg"
path = "src/main.rs"

# Runtime crates arrive with the specs that use them. `image` is pinned to the
# pure-Rust formats only (DEC-004, `pure-rust-codecs-default`): default features
# off, no avif/mozjpeg/native. `webp` (SPEC-019, DEC-021) is in the default set —
# pure-Rust (`image-webp`, MIT/Apache, no nasm/system libs): WebP DECODE
# (lossy+lossless) + LOSSLESS WebP encode. Lossy WebP encode (libwebp, a C dep) is
# the separate off-by-default `webp-lossy` feature (SPEC-020). The off-by-default
# `avif` feature (SPEC-018, DEC-020) adds AVIF OUTPUT via `image/avif`.
#
## ── Cross-target dependencies (native AND wasm32) ────────────────────────────
## The pure engine — decode → operations → encode — plus its typed errors and
## recipe (de)serialization. Every crate here compiles to `wasm32-unknown-unknown`
## (verified by the SPEC-072 design probe and the `just wasm-build` recipe), so
## the WASM build (DEC-064) gets the real pipeline, not a reimplementation.
## Native-only crates (the CLI/filesystem shell) live in the `cfg(not(wasm32))`
## table below; the AVIF decoder is there too — it is the one dep that cannot
## compile to bare wasm32 (see DEC-064).
[dependencies]
fast_image_resize = { version = "6.0.0", features = ["image"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
kamadak-exif = "0.6.1"
# Container-lane metadata WRITE crate (DEC-003, DEC-046). Pure-Rust, permissive
# (MIT OR Apache-2.0) — `just deny` stays green with no new exception. The read
# side stays kamadak-exif (read-only). `img-parts` does segment/chunk-level strip +
# rewrite (JPEG APPn/COM, PNG ancillary chunks) without re-decoding pixels. Tag-level
# EXIF edits (`set` / `clean --gps`) are done by an in-house TIFF-IFD reader+writer
# (`src/metadata/tiff.rs`, SPEC-045/DEC-046) operating on the bare TIFF block
# `img-parts` exposes — this replaced `little_exif` (dropping quick-xml,
# RUSTSEC-2026-0194/-0195, and brotli from the tree). v1 (SPEC-026) = `strip` +
# `clean --gps` for JPEG + PNG.
img-parts = "0.4.0"
# Text-watermark glyph rasterizer (SPEC-030 → SPEC-044, DEC-045). Pure-Rust,
# MIT OR Apache-2.0, and `ttf-parser`-free (unlike the superseded `ab_glyph`):
# `skrifa` (Google `fontations`) provides outlines + metrics, `zeno` rasterizes
# the anti-aliased coverage mask. This drops the unmaintained `ttf-parser`
# transitive from the tree, letting `deny.toml` delete its RUSTSEC-2026-0192
# ignore. NOT imageproc (it drags in sdl2/nalgebra). The default font is the
# bundled BSD-3 Go font (assets/fonts/Go-Regular.ttf), overridable with `--font PATH`.
skrifa = "0.44.0"
zeno = "0.3.3"
# Perceptual quality metric for auto-quality (SPEC-016, DEC-019). Pure-Rust,
# BSD-2-Clause (permissive — DEC-018). A metric crate only (no decode/encode/
# resize), so it does not violate `single-image-library`.
ssimulacra2 = "0.5.1"
# Lossy WebP encode (SPEC-020, DEC-022) behind the off-by-default `webp-lossy`
# feature. `webp` (MIT/Apache) → `libwebp-sys` (MIT) → VENDORED libwebp (BSD-3),
# compiled with `cc` — the project's FIRST C dependency, strictly opt-in (the
# default build stays pure-Rust). default-features off so we use the raw
# `from_rgba`/`from_rgb` encoders, NOT the webp crate's `image` feature (which
# would pull a second `image` crate). `just deny` stays green with no exception.
webp = { version = "0.3.1", optional = true, default-features = false }
# SVG RASTERIZE on the default, pure-Rust path (SPEC-060, DEC-054). `resvg` (with
# `usvg` + `tiny-skia` transitively) rasterizes `.svg` to the canonical `Image` —
# a rasterizer feeding the pixel core, NOT a second pixel library, so
# `single-image-library` is not tripped (the AVIF/webp-lossy precedent). Pure-Rust,
# zero system deps; the WHOLE tree is permissive (Apache-2.0/MIT/BSD/Zlib), so
# `just deny` needs NO new license exception.
#   `default-features = false` drops `system-fonts`/`memmap-fonts`/`raster-images`
#   (and the gif/webp/jpeg raster decoders they pull) — SVG rasterize stays lean
#   and deterministic. `features = ["text"]` keeps SVG `<text>` rendering, using
#   ONLY the bundled BSD-3 Go font (assets/fonts/Go-Regular.ttf, DEC-045) via an
#   explicit fontdb — no system-font enumeration. That text stack re-adds the
#   unmaintained `ttf-parser` (usvg -> fontdb/rustybuzz), covered by the documented
#   RUSTSEC-2026-0192 advisory ignore in deny.toml (parse-time only; upstream is
#   migrating font parsing onto fontations/HarfRust, which will delete it for us).
# Hostile-input safety lives in src/image/svg.rs: external file/URL hrefs refused
# (resources_dir=None + href resolver), output dims capped from usvg Tree::size()
# BEFORE Pixmap allocation (DEC-034). Non-optional (default path); no new feature.
#
# NOTE: `image` and `resvg` are NOT declared here — they are declared once per
# target table below, because the WASM build takes a SMALLER feature set of each
# (SPEC-074, DEC-066) and cargo features are additive: you cannot subtract a
# feature for one target from a shared `[dependencies]` entry. The native entries
# below carry exactly the feature sets this table used to, so the native build is
# byte-identical (DEC-064).
# HEIC/HEIF DECODE behind the off-by-default `heic` feature (SPEC-062, DEC-056,
# implementing DEC-052). NEVER in a distributed artifact: HEVC is patent-encumbered
# (Access Advance) on every decode path, and the mature pure-Rust decoders are AGPL.
#   `libheif-rs` (MIT) → `libheif-sys` (MIT) → the SYSTEM libheif C library (LGPL,
#   decode-only). cargo-deny sees only the MIT Rust crates, so `just deny` stays green
#   with NO exception — the LGPL obligation is attribution (docs/licensing.md), not a
#   deny entry. Contrast `ansi_colours`, which is an LGPL *crate*.
#   `default-features = false` drops `latest` (= v1_21, which would demand a system
#   libheif ≥ 1.21) and the `image` feature (a second `image` crate). `v1_17` is the
#   lowest API floor libheif-sys ships bindings for, so the feature builds against
#   Ubuntu 24.04's libheif 1.17.6 as well as Homebrew's 1.23 — see DEC-056.
#   Bindings are PRE-GENERATED per API version (no `use-bindgen`), so this adds no
#   bindgen/libclang build-tool dependency; and NOT `embedded-libheif`, which would
#   vendor+cmake-build libheif and pull the LGPLv3 §4 static-relink obligation.
libheif-rs = { version = "2.7.0", optional = true, default-features = false, features = ["v1_17"] }

## ── Native-only dependencies (everything EXCEPT wasm32) ──────────────────────
## The CLI/filesystem shell (`cli`, `source`, `sink`'s writers, `build`, `lint`) and
## the one codec that cannot compile to bare wasm32. The `src/lib.rs` modules that
## use these are gated `#[cfg(not(target_arch = "wasm32"))]`, so the wasm build never
## reaches for them (SPEC-072, DEC-064). Moving a dep here — rather than making it
## optional behind a new feature — is what keeps the NATIVE feature matrix (default /
## lean / avif / heic / webp-lossy) byte-for-byte unchanged: on every native target
## this table is unconditionally active, exactly as `[dependencies]` was.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# The pixel core and the SVG rasterizer, at their FULL native feature sets — these
# two lines are the ones the shared `[dependencies]` table used to carry, moved here
# verbatim so the native build is byte-identical (SPEC-074/DEC-066 trims the WASM
# copies only; see the wasm32 table below for what comes off and why).
#   `image`: the full pure-Rust decoder set (DEC-004). `tiff`/`bmp`/`ico` stay on
#   native — a CLI reads whatever file you point it at, and `lint`/`info` must
#   answer for a scanner's TIFF or a favicon's ICO.
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "webp"] }
#   `resvg` WITH `text`: native `crustyimg` renders SVG `<text>` as real glyphs
#   (DEC-054), using only the bundled Go font. Unchanged.
resvg = { version = "0.47.0", default-features = false, features = ["text"] }
# AVIF DECODE on the default, pure-Rust path (SPEC-058, DEC-053). Two CODEC deps
# feeding the canonical `Image` (the webp-lossy precedent, DEC-021/DEC-022) — NOT
# a second pixel library, so `single-image-library` is not tripped. AV1/AVIF is
# patent royalty-free, so it belongs on the default path (unlike HEIC, DEC-052).
#   `re_rav1d` (BSD-2-Clause, rerun's rav1d+dav1d-rs fork) — built NO-ASM
#   (`default-features = false`, only `bitdepth_8`/`bitdepth_16`) → pure-Rust,
#   ZERO build-tool deps (no nasm/meson), clean on all three CI OSes. We use its
#   re-exported safe `dav1d` API (`Decoder`/`send_data`/`get_picture`/plane access).
#   `avif-parse` (MPL-2.0, kornelski/Firefox-mp4parse-derived) — parses the
#   ISOBMFF/MIAF container to the primary-item + alpha AV1 OBUs; rejects grid/tiled
#   cleanly. MPL-2.0 is FILE-level weak copyleft (does NOT relicense our binary) —
#   allowed via a documented per-crate `deny.toml` exception (the ansi_colours
#   precedent). `image`'s own AVIF decode is dav1d/C and is NOT used (DEC-004).
# NATIVE-ONLY as of SPEC-072/DEC-064: `re_rav1d` is the single crate in the whole
# tree that does NOT compile to `wasm32-unknown-unknown` — it needs libc POSIX types
# bare wasm32 lacks (`off_t`, `ptrdiff_t`, errno `ENOENT`/`EIO`/`EINVAL`) and its
# thread-task const-eval fails (E0080). `avif-parse` follows it because nothing else
# uses it. AVIF decode is therefore UNAVAILABLE in the wasm build (a typed
# `ImageError::CodecUnavailableOnTarget`, never a panic); the AVIF-on-wasm strategy
# is SPEC-073. The NATIVE AVIF decode path is untouched.
re_rav1d = { version = "0.1.3", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
avif-parse = "2.1.0"
# The CLI surface itself (SPEC-007/SPEC-040, DEC-012/DEC-039) — `clap` derive +
# the `completions <SHELL>` generator. The `cli` module is native-only: the wasm
# build's entry point is `src/wasm.rs`, not an argv parser.
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
# Input resolution (`source`: file / glob / dir / stdin, SPEC-004) and the lint
# config's ignore patterns — both filesystem concepts with no wasm meaning.
glob = "0.3.3"
# Batch parallelism + progress for `apply --recipe` over a source list (STAGE-005,
# SPEC-031). `rayon` (data parallelism across inputs) is pre-justified by DEC-006
# (no async; rayon for batch). `indicatif` (progress bar) is DEC-033. Both pure-Rust,
# permissive (MIT OR Apache-2.0 / MIT) — `just deny` stays green. Each rayon task
# rebuilds its own pipeline from the (Sync) recipe + registry, since `Operation` is
# not `Send` (no Box<dyn Operation> crosses a thread).
# Native-only because their sole caller is `cli` (a batch is a list of FILES); the
# wasm surface transforms one in-memory image per call, and bare wasm32 has no
# threads anyway (rayon would need wasm-bindgen-rayon + COOP/COEP headers).
rayon = "1.12.0"
indicatif = "0.18.6"
# The build cache's hasher (SPEC-064, DEC-058): cache keys, source-content hashes,
# and the verify-on-read hash of a stored entry. RustCrypto `sha2` is pure Rust with
# no `build.rs` C/SIMD (unlike `blake3`'s default build, whose nasm/C path has bitten
# the Windows CI job), MIT OR Apache-2.0 → `just deny` stays green with no exception,
# and the lean `--no-default-features` build is unaffected. Hash throughput is
# immaterial here: the cache's win is skipping a decode+encode, not hashing faster.
# Native-only: its sole caller is the `build` module's on-disk cache.
sha2 = "0.11.0"
# Terminal preview for `view`, behind the default-on `display` feature (DEC-027).
# Native-only: a terminal is not a thing in a browser. The wasm build therefore
# compiles with `display` ON (the default feature set) but WITHOUT viuer — the
# `sink::Sink::Display` arm is gated on `all(feature = "display", not(wasm32))`.
viuer = { version = "0.11.0", optional = true }
# Filesystem watcher for `build --watch` behind the default-on `watch` feature
# (SPEC-067, DEC-060). `notify` runs a background OS-watcher thread and delivers
# events over an `std::sync::mpsc` channel — threads + a channel, NOT an async
# runtime, so DEC-006 (`no-async-runtime`) holds (its `mio` dep is a synchronous
# epoll/kqueue wrapper used by notify's own thread, not tokio/async-std). The
# whole transitive tail (inotify / fsevent-sys / kqueue / mio / windows-sys) is
# permissive (MIT / Apache-2.0 / BSD), so `just deny` stays green with NO new
# license exception. Default-features on = the per-OS backend (inotify on Linux,
# FSEvents on macOS, ReadDirectoryChangesW on Windows); the `serde`/`crossbeam`
# extras stay off. Optional + gated so the lean `--no-default-features` build
# drops it entirely (mirrors `display`, DEC-027).
# Native-only: its sole caller is the `build` module, and there is no filesystem
# to watch in a browser.
notify = { version = "8.2.0", optional = true }

## ── wasm32-only dependencies ─────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The pixel core and the SVG rasterizer again — same crates, same versions, SMALLER
# feature sets. Every byte of the demo bundle is a byte the user waits for, and these
# two feature lists are the only place a capability can be traded for download size
# (SPEC-074, DEC-066). Both trims are MEASURED, not guessed, and both are
# wasm32-only: the native lines above are untouched (DEC-064).
#
# `image` LOSES `tiff`, `bmp`, `ico` — MEASURED at −84,327 B brotli, the biggest win
# in this spec that costs the demo nothing. A browser demo is fed by a file picker,
# and the formats people actually drag into one are PNG/JPEG/GIF/WebP (+SVG, +AVIF
# via the browser's own decoder). TIFF/BMP/ICO decode in wasm bought nothing and cost
# download for everyone. Such an input now returns the same typed `ImageError` an
# unsupported format always did — no panic, no silent garbage — and
# `tests/wasm_roundtrip.rs::trimmed_codecs_error_cleanly_in_wasm` pins that, while
# its native twin pins that the CLI still reads all three.
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# `resvg` KEEPS `text` — MEASURED at 287,098 B brotli (20% of the bundle: the single
# biggest lever in the binary, and the one we DECLINED).
#
# Dropping it does not make SVG text ugly, it makes it VANISH. usvg without `text`
# drops `<text>` nodes from the tree entirely, so a logo or a chart rasterizes with a
# hole where its labels were — and `transform()` still returns `Ok` with correct
# dimensions, so nothing anywhere can tell the user. We built that artifact and
# confirmed it: `info()` still answered 40x30 on a text SVG whose text was gone, and
# the existing `svg_rasterizes_in_wasm` test (which asserts dimensions) stayed green
# straight through the corruption. DEC-054 already called text-to-nothing a
# "silent-wrong-output footgun"; 287 KB does not buy the right to ship one. A demo
# that quietly eats your labels is worse than a demo that loads a beat slower.
# `svg_text_renders_glyphs_in_wasm` is the guardrail that makes a future accidental
# drop go RED instead of silent. DEC-066 records the number so STAGE-026 can revisit
# it behind a lazy chunk, with the price tag already known.
resvg = { version = "0.47.0", default-features = false, features = ["text"] }
# The JS ↔ Rust boundary for the WASM build (SPEC-072, DEC-064). Pure-Rust and
# permissive (MIT OR Apache-2.0), so DEC-004 holds and `just deny` needs no new
# exception. It is GLUE, not a codec — `single-image-library` is not tripped: the
# pixels still flow through the one `image` crate. wasm32-only, so it adds nothing
# to the native dependency set (the released binary is byte-identical).
wasm-bindgen = "0.2.126"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# The `#[wasm_bindgen_test]` harness — runs the round-trip in Node/a headless
# browser via `wasm-pack test`. Dev-only; never in the shipped `.wasm`.
wasm-bindgen-test = "=0.3.76"

[features]
# `display` (terminal preview via viuer) is ON BY DEFAULT so `view` works out of the
# box in the released binary — it is a headline command (DEC-027, supersedes DEC-011).
# Headless/server/CI builds that don't want viuer's tree use `--no-default-features`.
default = ["display", "watch"]
display = ["dep:viuer"]
webp-lossy = ["dep:webp"]
# AVIF output behind an off-by-default feature (SPEC-018, DEC-020). The codec
# arrives via the `image` crate's own `avif` feature → `ravif` → `rav1e` (pure
# Rust, no nasm/system libs), so this adds NO new top-level dep. Kept gated for
# compile time / binary size / encode speed; the default build keeps AVIF output
# at exit 4 (DEC-004). `just deny` stays green via the scoped `libfuzzer-sys`
# exception in deny.toml.
#   OFF by default on NATIVE, but the WASM artifact is built WITH it (SPEC-073,
#   DEC-065): `rav1e` compiles and runs on wasm32, and "PNG → AVIF in the browser"
#   is the demo's headline — no browser API encodes AVIF, so if we don't ship the
#   encoder, nobody can. It costs +345 KB brotli (1.19 → 1.52 MB). The `just wasm-*`
#   recipes pass the flag (`_wasm_features`); build the wasm artifact through them.
#   AVIF DECODE is a different codec (`re_rav1d`, native-only) and stays out.
avif = ["image/avif"]
# HEIC/HEIF INPUT behind an off-by-default feature (SPEC-062, DEC-052/DEC-056).
# Requires a system libheif (≥ 1.17) at build and run time — `brew install libheif`
# / `apt-get install libheif-dev`. Local-build-only: no released binary, Homebrew
# bottle, or `cargo install` default enables it. Without it, a `.heic` input is
# DETECTED and rejected with `ImageError::CodecNotBuilt` → exit 4.
heic = ["dep:libheif-rs"]
# `build --watch`: the debounced filesystem-watch rebuild loop (SPEC-067, DEC-060).
# ON BY DEFAULT (like `display`, DEC-027) so the released binary ships `--watch`;
# `--no-default-features` drops `notify` and its per-OS backend, and `--watch`
# then returns a clear "built without watch support" usage error (exit 2), not a
# panic or a parse failure. The pure watch logic (`src/build/watch.rs`) compiles
# unconditionally and stays unit-tested even in the lean build.
watch = ["dep:notify"]

[dev-dependencies]
serde_json = "=1.0.150"

# Native-only dev-deps. Cargo builds EVERY dev-dependency when it builds ANY test
# target, so a dev-dep that cannot compile to wasm32 breaks `wasm-pack test` even
# when no wasm test touches it (SPEC-072): `criterion`'s default features pull
# `rayon`, which hard-`compile_error!`s on wasm. Both of these are filesystem/thread
# tools with no wasm meaning, so scoping them to native is the honest fix — the
# native test suite sees no change at all.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Temp dirs for the native integration tests (they write real files).
tempfile = "=3.27.0"
# Micro-benchmark harness (SPEC-025, DEC-028). Dev-only — NOT in the shipped binary
# or the default build; runs via `just bench-micro` (renamed from `just bench` in
# SPEC-088, where `bench` became the committed corpus harness). Permissive
# (MIT/Apache); `just deny` stays green.
criterion = "=0.8.2"

[[bench]]
name = "pipeline"
harness = false

# Release profile used by cargo-dist (DEC-040). Inherits from release with thin
# LTO for smaller, faster binaries. Inert for normal `cargo build`/`cargo test`.
[profile.dist]
inherits = "release"
lto = "thin"

# How wasm-pack invokes `wasm-opt` on the built `.wasm` (SPEC-074, DEC-066). Inert
# for every native build — cargo ignores `package.metadata`.
#
# **wasm-opt is OFF, and that is a measured decision, not an oversight.**
#
# It is a RAW-size tool, not a wire-size tool. On this binary (fat LTO,
# codegen-units = 1) it restructures LLVM's very regular output — merging and
# folding code — which removes 340 KB of raw bytes and, in doing so, removes the
# REDUNDANCY the compressor was feeding on. Measured at the shipped config:
#
#            raw          brotli -q11
#   off      6,003,911    1,394,313
#   -O       5,663,469    1,430,801   (−340 KB raw, +36 KB ON THE WIRE)
#
# The user waits for the compressed bytes, not the raw ones, and the penalty holds
# at every level we tried (brotli q4/q5/q9/q11 AND gzip -9, +17 KB..+64 KB). The
# module is not one microsecond faster with it on, either — measured through the
# real artifact: AVIF encode 350 ms vs 343 ms, perceptual search 719 ms vs 633 ms.
# So it costs download and buys nothing the user can feel. Off it goes.
#
# IF YOU TURN IT BACK ON, YOU MUST KEEP THE FEATURE FLAGS BELOW. wasm-pack's default
# invocation allows an older feature set than rustc now emits, so under
# `opt-level = "z"` wasm-opt fails validation with thousands of `[wasm-validator
# error]` lines. The list below is exactly Rust's wasm32 baseline (`rustc --print
# cfg`) plus `simd`, which `fast_image_resize` emits. Deliberately NOT `-all`, which
# would also let wasm-opt reach for GC/threads/exception-handling.
#
# That failure is LOUD — wasm-pack reports it and exits 1 (verified at SPEC-074 verify
# on wasm-pack 0.15.0 / binaryen 130, across all four invocation shapes). But it leaves
# the UN-OPTIMIZED module sitting in `pkg/`, so a caller that loses the exit code
# through a pipe (`just wasm-build | tail`) sees a plausible artifact and a size no
# optimizer ever touched. Check that the raw size MOVED — don't read an exit code
# through a pipe.
#
#   wasm-opt = ["-O", "--enable-bulk-memory", "--enable-bulk-memory-opt",
#               "--enable-nontrapping-float-to-int", "--enable-sign-ext",
#               "--enable-mutable-globals", "--enable-reference-types",
#               "--enable-multivalue", "--enable-simd"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
